2008-09-09  Thomas Thurman  <tthurman@gnome.org>

        * NEWS: 2.23.610 release.

2008-09-09  Thomas Thurman  <tthurman@gnome.org>

        More desktop file fixes.  Thanks again to Vincent Untz.
        Closes #549479.

        * src/Makefile.am, po/POTFILES.in: added references
          to the wm-properties desktop file. 

2008-09-08  Thomas Thurman  <tthurman@gnome.org>

        * src/.cvsignore: add metacity-wm.desktop
        * src/Makefile.am: add the same to CLEANFILES

2008-09-08  Vincent Untz  <vuntz@gnome.org>

        Desktop file installed in both places.

        * src/Makefile.am: install both kinds of desktop file
        * src/metacity-wm.desktop.in: desktop file for gnome/wm-properties

2008-09-03  Thomas Thurman  <tthurman@gnome.org>

        * configure.in: Post-release bump to 2.23.610.

2008-09-03  Thomas Thurman  <tthurman@gnome.org>

        * NEWS: 2.23.377 release.

2008-09-03  Thomas Thurman  <tthurman@gnome.org>

        * src/metacity.desktop.in: removed invalid "Window Manager" group
          at request of Matthias Clasen.

2008-09-02  Thomas Thurman  <tthurman@gnome.org>

        * configure.in: Post-release bump to 2.23.377.

2008-09-02  Thomas Thurman  <tthurman@gnome.org>

        * NEWS: 2.23.233 release.

2008-09-02  Thomas Thurman  <tthurman@gnome.org>

        Desktop file moved, according to policy change.  Closes #549479.

        * src/metacity.desktop.in: Don't display the desktop file
        * src/Makefile.am: Desktop file goes in apps directory

2008-08-20  Baptiste Mille-Mathias <baptiste.millemathias@gmail.com>

	* src/default_icon.png: updated to a tango styled pixmap

2008-08-18  Thomas Thurman  <tthurman@gnome.org>

        * configure.in: Post-release bump to 2.23.233.

2008-08-18  Thomas Thurman  <tthurman@gnome.org>

        * NEWS: 2.23.144 release.

2008-08-18  Thomas Thurman  <tthurman@gnome.org>

        * configure.in: undo erroneous earlier version number change