@@ -363,10 +363,10 @@ def main():
   get_up_to_date()
   check_we_are_up_to_date()
   version = version_numbers()
-  check_file_does_not_exist(version)
-  edit_news_entry(version)
-  build_it_all(version)
-  tag_the_release(version)
+  #check_file_does_not_exist(version)
+  #edit_news_entry(version)
+  #build_it_all(version)
+  #tag_the_release(version)
   increment_version(version)
   upload(version)
   print version['announcement']
