@@ -1,5 +1,9 @@
 2008-09-09  Thomas Thurman  <tthurman@gnome.org>
 
+        * configure.in: Post-release bump to 2.23.987.
+
+2008-09-09  Thomas Thurman  <tthurman@gnome.org>
+
         * NEWS: 2.23.610 release.
 
 2008-09-09  Thomas Thurman  <tthurman@gnome.org>
